 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

Pig Change Log

Release 0.16.1 - Unreleased

INCOMPATIBLE CHANGES

IMPROVEMENTS

PIG-5037: Add api getDisplayString to PigStats (zjffdu)

PIG-4945: Update document for conflicting macro params (knoguchi via daijy)

OPTIMIZATIONS

BUG FIXES

PIG-5043: Slowstart not applied in Tez with PARALLEL clause (rohini)

PIG-4930: Skewed Join Breaks On Empty Sampled Input When Key is From Map (nkollar via rohini)

PIG-3417: Job fails when skewed join is done on tuple key (nkollar via rohini)

PIG-5074: Build broken when hadoopversion=20 in branch 0.16 (szita via daijy)

PIG-5064: NPE in TestScriptUDF#testPythonBuiltinModuleImport1 when JAVA_HOME is not set (water via daijy)

PIG-5048: HiveUDTF fail if it is the first expression in projection (nkollar via daijy)

PIG-5033: MultiQueryOptimizerTez creates bad plan with union, split and FRJoin (rohini,tmwoordruff via rohini)

PIG-5041: RoundRobinPartitioner is not deterministic when order of input records change (rohini)

PIG-5040: Order by and CROSS partitioning is not deterministic due to usage of Random (rohini)

PIG-4951: Rename PIG_ATS_ENABLED constant (szita via daijy)

PIG-5035: killJob API does not work in Tez (zjffdu via rohini)

PIG-5032: Output record stats in Tez is wrong when there is split followed by union (rohini)

PIG-5019: Pig generates tons of warnings for udf with enabled warnings aggregation (murshyd via rohini)

PIG-4974: A simple map reference fail to cast (knoguchi)

PIG-4967: NPE in PigJobControl.run() when job status is null (water via daijy)

PIG-4935: TEZ_USE_CLUSTER_HADOOP_LIBS is always set to true (rohini)

PIG-4961: CROSS followed by LIMIT inside nested foreach drop data from result (rohini)

PIG-4960: Split followed by order by/skewed join is skewed in Tez (rohini)

PIG-4947: LOAD with HBaseStorage using a mix of pure wildcards and prefixed wildcards results in