@@ -32,6 +32,8 @@ OPTIMIZATIONS
 
 BUG FIXES
 
+PIG-5088: HashValuePartitioner has skew when there is only map fields (rohini)
+
 PIG-5043: Slowstart not applied in Tez with PARALLEL clause (rohini)
 
 PIG-4930: Skewed Join Breaks On Empty Sampled Input When Key is From Map (nkollar via rohini)
